--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,5 +1,4 @@
 FROM alpine
-RUN apk add --no-cache curl wget busybox-extras netcat-openbsd python py-pip bash
-RUN pip install awscli
+RUN apt install cowsay
 RUN apk --purge -v del py-pip
 CMD tail -f /dev/null
