--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:20.04
 
-CMD apt-get install cowsay
+CMD apt-get install cowsay && apt-get install htop
 
 CMD cowsay "!!!!!!!Hello from docker!!!!!!!!"
